# whatsapp-mcp

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CLOUDRUN_PENDING.md  DOCUMENTATION_CONSOLIDATION.md  Dockerfile  Dockerfile.bridge  Dockerfile.debug  Dockerfile.mcp  GEMINI.md  QUICKSTART.md  README.md  SECRETS_REFERENCE.md  STATUS_EXAMPLES.md  cloudbuild.yaml  cloudrun.yaml  docker-compose.yml  plan.readme  start-mcp.sh  whatsapp-mcp.nginx
.github/workflows/: ci.yml
docs/: README.md  database.md  migrations.md  networking.md  status.md  troubleshooting.md
docs/deployment/: cloud-run.md  docker.md
gcp/: API_REQUIREMENTS.md  DATABASE_SETUP.md.archived  README.md  cloudbuild-setup.sh  cloudrun.yaml  env-template.yaml  setup.sh
gcp/terraform/: .gitignore  main.tf  outputs.tf  (+3 more)
migrations/: 000_create_bridge_tables.sql  010_create_whatsmeow_session_tables.sql
scripts/: deploy-cloudrun.sh
whatsapp-bridge/: Dockerfile  go.mod  go.sum  main.go  main_test.go  status.html
whatsapp-mcp-server/: Dockerfile  README.md  auth_middleware.py  config.py  config.yaml  database.py  database_postgres.py  database_sqlite.py  database_supabase.py  main.py  models.py  pyproject.toml  storage_gcs.py  test_audio.py  test_whatsapp.py  verify_protocols.py  whatsapp.py
whatsapp-mcp-server/docs/: DECISION_LOG.md
whatsapp-mcp-server/migrations/: 000_create_bridge_tables.sql  001_create_chat_list_view.sql  010_create_whatsmeow_session_tables.sql  README.md
whatsapp-mcp-server/tests/: conftest.py  test_config.py  test_formatting.py  test_http_app.py  test_utils.py
