[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "requests>=2.32.3",
    "psutil>=6.1.0",
    "fastmcp>=2.11.0",
]

[tool.setuptools]
py-modules = [
    "audio",
    "main",
    "whatsapp",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]
