[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "psutil>=6.1.0",
    "requests>=2.32.3",
    "supabase>=2.0.0",
    "google-auth>=2.35.0",
    "google-cloud-storage>=2.18.0",
    "cachetools>=5.5.0",
    "starlette>=0.41.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.9",
]
